syntax = "proto3";

package backend.v1;

import "backend/v1/user_resources.proto";

service UserService {
  // 指定された User を取得する
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  // User を新たに作成する
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  // Username が存在するかを確認する
  rpc ExistsUsername(ExistsUsernameRequest) returns (ExistsUsernameResponse);
  // Email が存在するかを確認する
  rpc ExistsEmail(ExistsEmailRequest) returns (ExistsEmailResponse);
}

message GetUserRequest {
  string username = 1;
}

message GetUserResponse {
  User user = 1;
}

message CreateUserRequest {
  string username = 1;
  string password = 2;
  string email = 3;
}

message CreateUserResponse {
  User user = 1;
}

message ExistsUsernameRequest {
  string username = 1;
}

message ExistsUsernameResponse {
  bool exists = 1;
}

message ExistsEmailRequest {
  string email = 1;
}

message ExistsEmailResponse {
  bool exists = 1;
}
